--- a/dash.html
+++ b/dash.html
@@ -110,13 +110,13 @@
         <div class="card-body text-center p-3 w-100 pt-0">
           <div class="docs-info">
             <h6 class="mb-0">Need help?</h6>
-            <p class="text-xs font-weight-bold mb-0">Please check our docs</p>
+            <p class="text-xs font-weight-bold mb-0">Please chat us</p>
           </div>
         </div>
       </div>
-      <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/argon-dashboard" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">Documentation</a>
-      <a class="btn btn-primary btn-sm mb-0 w-100" href="https://www.creative-tim.com/product/argon-dashboard-pro?ref=sidebarfree" type="button">Upgrade to pro</a>
-    </div>
+      <a href="#" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">Help</a>
+      <a class="btn btn-primary btn-sm mb-0 w-100" href="#" type="button">Chat us</a>
+    </div> 
   </aside>
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
